cmake_minimum_required(VERSION 3.21)
project(Leetcode_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode_CPP main.cpp Leetcode_1/test.cpp Leetcode_2/LC_1820.cpp Leetcode_3/LC_2002.cpp Leetcode_2/LC_1255.cpp Leetcode_1/LC_001.cpp Leetcode_1/LC_002.cpp Leetcode_1/LC_003.cpp Leetcode_1/LC_005.cpp Leetcode_1/LC_006.cpp Leetcode_1/LC_007.cpp Leetcode_1/LC_009.cpp Leetcode_1/LC_011.cpp Leetcode_1/LC_017.cpp Leetcode_1/LC_019.cpp Leetcode_1/LC_020.cpp)
